--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "winston": "^3.17.0"
   }
 }
