Crud completed database with prism

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,11 @@
-PORT=
-PUBLIC_PATH=
+PORT=3000
+PUBLIC_PATH=public
+
+POSTGRES_URL=postgresql://postgres:123456@localhost:5432/USER
+POSTGRES_USER=postgres
+POSTGRES_DB=USER
+POSTGRES_PORT=5432
+POSTGRES_PASSWORD=123456
+
+
+NODE_ENV=development
